# zink-xlib-termux

./: .gitlab-ci.yml  .mailmap  .mr-label-maker.yml  README.md  README.rst  meson.build  meson_options.txt  tsan-blacklist.txt
docs/: android.rst  codingstyle.rst  conf.py  egl.rst  envvars.rst  features.txt  gitlab-ci.yml  isaspec.rst  macos.rst  meson.build  meson.rst  release-calendar.csv  relnotes.rst  rusticl.rst  teflon.rst  u_trace.rst
docs/ci/: index.rst
docs/drivers/: anv.rst  asahi.rst  freedreno.rst  nvk.rst  panfrost.rst  svga3d.rst  zink.rst
docs/drivers/amd/: hang-debugging.rst
docs/drivers/panfrost/: instancing.rst
docs/gallium/: screen.rst  tgsi.rst
docs/gallium/cso/: rasterizer.rst
docs/isl/: formats.rst  units.rst
docs/relnotes/: 23.3.4.rst  23.3.5.rst  24.0.0.rst  24.0.4.rst  24.0.5.rst  24.0.7.rst  24.0.9.rst  24.1.0.rst  new_features.txt
src/broadcom/simulator/: meson.build  v3d_simulator.c  v3d_simulator_wrapper.cpp  v3dx_simulator.c  v3dx_simulator.h
src/etnaviv/isa/: asm.h  encode.c  enums.h.py  etnaviv.xml  isa.h  isa.rs  isa_proc.rs  lib.rs  meson.build
src/glx/tests/: meson.build  query_renderer_implementation_unittest.cpp
src/intel/: meson.build
src/intel/blorp/: blorp.c  blorp.h  blorp_blit.c  blorp_brw.c  blorp_clear.c  blorp_elk.c  blorp_genX_exec.h  blorp_genX_exec_brw.h  blorp_genX_exec_elk.h  blorp_priv.h  meson.build
src/intel/ci/: angle-anv-jsl-fails.txt  angle-anv-jsl-flakes.txt  angle-anv-tgl-fails.txt  deqp-anv-jsl-angle-full.toml  deqp-anv-jsl-angle.toml  deqp-anv-tgl-angle-full.toml  deqp-anv-tgl-angle.toml  deqp-anv-tgl.toml  deqp-iris-amly.toml  deqp-iris-apl.toml  deqp-iris-cml.toml  deqp-iris-glk.toml  deqp-iris-jsl.toml  deqp-iris-kbl.toml  deqp-iris-whl.toml  gitlab-ci-inc.yml  gitlab-ci.yml  traces-iris.yml
src/intel/common/: intel_aux_map.c  intel_aux_map.h  intel_batch_decoder.c  intel_common.c  intel_compute_slm.c  intel_compute_slm.h  intel_debug_identifier.c  intel_disasm.c  intel_engine.c  intel_engine.h  intel_gem.h  intel_genX_state.h  intel_genX_state_brw.h  intel_genX_state_elk.h  intel_l3_config.h  intel_urb_config.c  meson.build  mi_builder.h
src/intel/compiler/: brw_asm.c  brw_asm.h  brw_asm_internal.h  brw_asm_tool.c  brw_cfg.cpp  brw_cfg.h  brw_clip.h  brw_compile_clip.c  brw_compile_ff_gs.c  brw_compile_gs.cpp  brw_compile_sf.c  brw_compile_tcs.cpp  brw_compile_vs.cpp  brw_compiler.c  brw_compiler.h  brw_dead_control_flow.cpp  brw_dead_control_flow.h  brw_debug_recompile.c  brw_def_analysis.cpp  brw_device_sha1_gen_c.py  brw_disasm.c  brw_disasm.h  brw_disasm_info.c  brw_disasm_info.cpp  brw_disasm_info.h  brw_eu.c  brw_eu.h  brw_eu_compact.c  brw_eu_defines.h  brw_eu_emit.c  brw_eu_util.c  brw_eu_validate.c  brw_fs.cpp  brw_fs.h  brw_fs_bank_conflicts.cpp  brw_fs_builder.h  brw_fs_cmod_propagation.cpp  brw_fs_combine_constants.cpp  brw_fs_copy_propagation.cpp  brw_fs_cse.cpp  (+94 more)
src/intel/decoder/: intel_batch_decoder.c  intel_batch_decoder_stub.c  intel_decoder.h  meson.build
src/intel/dev/: gen_wa_helpers.py  intel_debug.c  intel_debug.h  intel_dev_info.c  intel_device_info.c  intel_device_info.h  intel_device_info.py  intel_device_info_gen_h.py  intel_device_info_test.c  intel_hwconfig.c  mesa_defs.json  meson.build
src/intel/ds/: intel_driver_ds.cc  intel_driver_ds.h  intel_pps_driver.cc  intel_pps_perf.cc  intel_tracepoints.py  meson.build
src/intel/genxml/: gen12.xml  gen125.xml  gen20.xml  genX_cl_helpers.h  genX_helpers.h  gen_pack_header.py  meson.build
src/intel/isl/: isl.c  isl.h  isl_aux_info.c  isl_drm.c  isl_emit_cpb.c  isl_emit_depth_stencil.c  isl_format.c  isl_genX_helpers.h  isl_gfx12.c  isl_gfx20.c  isl_gfx20.h  isl_priv.h  isl_storage_image.c  isl_surface_state.c  meson.build
src/intel/perf/: gen_perf.py  intel_perf.c  intel_perf.h  intel_perf_mdapi.c  intel_perf_query.c  intel_perf_query.h  intel_perf_query_layout.c  intel_perf_regs.h  intel_perf_setup.h  meson.build  oa-lnl.xml
src/intel/shaders/: generate.cl  libintel_shaders.h  meson.build
src/intel/tools/: aubinator.c  aubinator_error_decode.c  aubinator_error_decode_lib.c  aubinator_error_decode_lib.h  aubinator_error_decode_xe.c  aubinator_error_decode_xe.h  aubinator_viewer.cpp  aubinator_viewer.h  error2hangdump.c  error_decode_xe_lib.c  error_decode_xe_lib.h  i965_asm.c  i965_disasm.c  intel_dev_info.c  intel_hang_replay.c  intel_hang_viewer.cpp  meson.build
src/intel/vulkan/: anv_allocator.c  anv_android.c  anv_api_version.h  anv_batch_chain.c  anv_blorp.c  anv_buffer.c  anv_buffer_view.c  anv_cmd_buffer.c  anv_descriptor_set.c  anv_device.c  anv_formats.c  anv_gem_stubs.c  anv_genX.h  anv_image.c  anv_image_view.c  anv_instance.c  anv_internal_kernels.c  anv_kmd_backend.h  anv_nir.h  anv_nir_apply_pipeline_layout.c  anv_nir_compute_push_layout.c  anv_nir_lower_load_patch_vertices_in.c  anv_nir_lower_multiview.c  anv_nir_lower_resource_intel.c  anv_nir_lower_ubo_loads.c  anv_perf.c  anv_physical_device.c  anv_pipeline.c  anv_pipeline_cache.c  anv_private.h  anv_queue.c  anv_sparse.c  anv_util.c  anv_utrace.c  anv_va.c  genX_acceleration_structure.c  genX_blorp_exec.c  genX_cmd_buffer.c  genX_cmd_compute.c  genX_cmd_draw.c  (+11 more)
src/intel/vulkan_hasvk/: anv_batch_chain.c  anv_blorp.c  anv_cmd_buffer.c  anv_descriptor_set.c  anv_device.c  anv_formats.c  anv_image.c  anv_nir_apply_pipeline_layout.c  anv_nir_lower_multiview.c  anv_nir_lower_ubo_loads.c  anv_nir_lower_ycbcr_textures.c  anv_perf.c  anv_pipeline.c  anv_pipeline_cache.c  anv_private.h  anv_utrace.c  genX_blorp_exec.c  genX_cmd_buffer.c  genX_pipeline.c  genX_state.c  meson.build
src/loader/: loader.c  loader.h  loader_dri3_helper.c  loader_dri3_helper.h  loader_dri_helper.c  loader_dri_helper.h  loader_wayland_helper.c  loader_wayland_helper.h  meson.build
src/mapi/shared-glapi/: meson.build
src/nouveau/: meson.build
src/nouveau/ci/: deqp-nvk.toml  gitlab-ci-inc.yml  gitlab-ci.yml  nvk-ga106-fails.txt  nvk-ga106-flakes.txt  nvk-ga106-skips.txt
src/nouveau/codegen/: nv50_ir_from_nir.cpp
src/nouveau/compiler/: meson.build  nak.h  (+11 more)
(+2412 files in other folders)
